# intent_detection_src

OpenFace/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
OpenFace/exe/FaceLandmarkVidMulti/: CMakeLists.txt  CMakeLists.txt~  FaceLandmarkVidMulti.cpp
OpenFace/include/OpenFace/: resized_publisher.h  resized_publisher.h~  resized_subscriber.h  resized_subscriber.h~
OpenFace/lib/local/FaceAnalyser/src/: GazeEstimation.cpp
OpenFace/lib/local/LandmarkDetector/: CMakeLists.txt
OpenFace/lib/local/LandmarkDetector/src/: LandmarkDetectorFunc.cpp
OpenFace/msg/: My_message.msg  My_message.msg~  intent_msg.msg  intent_msg.msg~  intent_msg_all.msg  pose_message_all.msg  pose_message_all.msg~
OpenFace/scripts/: continuos_detector.py  croos.py  intention_detector.py  saver_of_files.py  show_intent.py  test_looking.py  writemdb.py
OpenFace/src/: Intention_detector.cpp  manifest.cpp  my_publisher.cpp  my_subscriber.cpp  resized_publisher.cpp  resized_publisher.cpp~  resized_subscriber.cpp  resized_subscriber.cpp~  subscribe_intent.cpp
k2_client/launch/: k2_client.launch  k2_client.launch~
k2_client/src/: rgb.cpp
